# clibas

./: .gitignore  MANIFEST.in  README.md  publish.yml  pypi_readme.md  pyproject.toml  readthedocs.yaml  setup.py
.github/workflows/: publish.yml
code/: config.py  full_analysis.py  main.py  minimal_analysis.py  testing.py
code/clibas/: baseclasses.py  dataanalysis.py  datapreprocessors.py  datatypes.py  dispatchers.py  feature_matrix_generators.py  featurization.py  featurize.py  hv_plotters.py  lib_design.py  limbo.py  misc.py  parsers.py  pipelines.py  plotters.py
code/clibas/prev/: Dispatcher.py  ProcessHandlers.py  analysis_demo.py  full_analysis.py  heinis_analysis.py  manifold_clustering.py
code/configs/: config.py  config_demo.py  config_heinis.py  configohno_cys.py  ohno_cys_analysis.py  ohno_itc_cyc_analysis.py
code/utils/: Plotter.py  ProcessHandlers.py  datatypes.py  lib_design.py  misc.py  tmpbte578gn  tmpfyddo4hj  tmpkq83pmqx
docs/: requirements.txt
docs/source/: conf.py  dataanalysis.md  dataloaders.md  datapreprocessors.md  documentation.md  index.md  parsers.md  pipelines.md  tutorial.md
docs/source/_static/: custom.css
docs/source/examples/: 01. Heinis FXIa selection.ipynb  02. Payne CCL22 selection.ipynb  03. Walport covalent PADI4 selection.ipynb  04. Reischer bacterial SELEX.ipynb  05. Angelini yeast selections.ipynb  06. Vinogradov DOMEK enzyme profiling.ipynb
environment/: clibas_env.yml
example_configs/: Angelini_yeast_config.yaml  Heinis_FXIa_config.yaml  Payne_CCL22_config.yaml  Reischer_antibacterial_SELEX_config.yaml  Vinogradov_DOMEK_config.yaml  Walport_PADI4_config.yaml
src/: config.py  umap_example.py
src/clibas/: __init__.py  baseclasses.py  config_defaults.py  cython_hacks.c  cython_hacks.pyx  dataanalysis.py  dataloaders.py  datapreprocessors.py  datatypes.py  dispatchers.py  featurization.py  hv_plotters.py  lib_design.py  misc.py  parsers.py  pipelines.py  plotters.py  px_plotters.py
tests/: conftest.py  test_basic_dataanalysis.py  test_components.py  test_config_parser.py  test_initializations.py  test_parsers.py  test_prepro.py  test_umaps.py
tests/data/: FXIa_r3_L7_S00_test.fastq  FXIa_r3_L7_pep.npy  FXIa_r6_L7_S10_test.fastq  FXIa_r6_L7_pep.npy  Heinis_FXIa_config.yaml  PADI4_r5_15_min_test_dna.npy  PADI4_r6_15_min_test_dna.npy  Walport_PADI4_config.yaml  basic_invalid_config.yaml  basic_valid_config.yaml  invalid_faulty_SMILES_config.yaml  invalid_faulty_aas_config.yaml  invalid_no_dna_monomers_config.yaml  invalid_no_pep_design_config.yaml  valid__no_aa_SMILES_config.yaml  valid_minimum_config.yaml  valid_no_aa_SMILES_config_non_standard.yaml  valid_no_codon_table_config.yaml  valid_no_complement_config.yaml  valid_no_const_config.yaml  valid_no_lib_design_config.yaml  valid_no_logger_config.yaml  valid_no_utr_config.yaml
