[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clibas"
version = "0.4.4"
description = "Combinatorial Library Analysis Suite: analysis of NGS data from genetically encoded libraries"
authors = [{name = "Alexander Vinogradov", email = "a_vngrdv@pm.me"}]
readme = "pypi_readme.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["chemoinformatics", "bioinformatics"] 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3", 
	"Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=2.2",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",
    "logomaker",
    "seaborn",
]

[project.optional-dependencies]
ml = [
    "scikit-learn",
    "rdkit>=2024.3.5",
    "umap-learn",
    "hdbscan",
    "plotly",
    "h5py"
]

dev = [
    "pytest",
    "black",
    "flake8",
	"ruff",
	"cibuildwheel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clibas = ["*.pyx", "*.pxd"]

[tool.sphinx]
builder = "html"
source-dir = "docs/source"

# ── linting ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

lint.select = ["E", "F", "B", "I", "UP", "C4", "SIM", "W"]
lint.ignore = ["E501", "C408", "B017"]

fix = true

exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── cibuildwheel config (read by the GitHub Actions job) ─────────────────────
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux*"
before-build = "pip install numpy cython"
test-requires = ["numpy"]
test-command  = "python -c \"from clibas.cython_hacks import idx_finder; print('OK')\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
archs = "x86_64"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.macos-15-intel]
build = "cp310-* cp311-* cp312-*"

[tool.cibuildwheel.windows]
archs = "AMD64"